--- a/helm/templates/cronjob.yaml
+++ b/helm/templates/cronjob.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.cronjob.enabled -}}
 apiVersion: batch/v1
 kind: CronJob
 metadata:
@@ -19,3 +20,4 @@ spec:
             - -c
             - date; echo Hello from the Kubernetes cluster
           restartPolicy: OnFailure
+{{- end }}
