--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -2,10 +2,10 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 2
+replicaCount: 1
 
 image:
-  repository: chenchienlin/sort_visual
+  repository: docker-registry.com/chenchienlin/sort_visual
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
@@ -39,6 +39,9 @@ securityContext: {}
 service:
   type: LoadBalancer
   port: 3000
+
+cronjob:
+  enabled: false
 
 ingress:
   enabled: true
